--- a/Lixo-Mestre/LixoPapao.storyboard
+++ b/Lixo-Mestre/LixoPapao.storyboard
@@ -144,11 +144,14 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Eiu-cA-uf5">
-                                <rect key="frame" x="0.0" y="364" width="320" height="30"/>
+                                <rect key="frame" x="0.0" y="441" width="320" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Voltar">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="botaoVoltar:" destination="gwc-JE-nW5" eventType="touchUpInside" id="YXd-mP-e7Q"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
